--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts",
     "test": "npm test",
     "dev": "nodemon"
@@ -13,9 +13,9 @@
   "author": "Miguel Angel Gatto",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/pg": "^8.6.4",
-    "@types/express": "^4.17.13",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.5.0"
   },
   "nodemonConfig": {
