--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts",
     "test": "npm test",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "heroku-prebuild": "npm install"
   },
   "author": "Miguel Angel Gatto",
   "license": "ISC",
