--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node ./dist/index.js",
     "build": "rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts",
     "test": "npm test",
