--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "rimraf": "^3.0.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "winston": "^3.6.0"
   },
