--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@types/pg": "^8.6.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "rimraf": "^3.0.2",
