feat(swagger): add swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "lib": [
       "es2020"
     ],
-    "baseUrl": "./",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
     "importHelpers": true,
     "module": "commonjs",
