--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "scripts": {
     "start": "npm run build && node ./build/index.js",
-    "build": "rimraf ./build && tsc",
     "lint": "eslint . --ext .ts",
     "test": "npm test",
-    "dev": "nodemon"
+    "swagger": "tsoa spec-and-routes && tsoa swagger",
+    "dev": "nodemon",
+    "predev": "npm run swagger",
+    "build": "rimraf ./build && tsc",
+    "prebuild": "npm run swagger"
   },
   "author": "Miguel Angel Gatto",
   "license": "ISC",
@@ -27,13 +30,17 @@
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "rimraf": "^3.0.2",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.3.1",
+    "tsoa": "^3.14.1",
     "typescript": "^4.5.5",
     "winston": "^3.6.0"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "concurrently": "^7.1.0",
     "eslint": "^8.9.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0"
